fix view buttons on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -127,10 +127,6 @@ p {
 }
 
 @media only screen and (max-width: 375px) and (max-height: 812px) {
-  .body {
-    overflow: hidden;
-  }
-  
   .content {
     padding: 3px 12px;
     height: 230px;
@@ -138,6 +134,11 @@ p {
     display: flex;
     align-items: center;
     text-align: center;
+  }
+
+  .button {
+    font-size: 1.1em;
+    width: 110px;
   }
 
   .project-section {
